<resources>
    <string name="app_name">Operaciones</string>
    <string name="titulo">Opciones</string>
    <string name="opcion_areas">Areas</string>
    <string name="opcion_volumenes">Volúmenes</string>
    <string name="opcion_operaciones_realizadas">Operaciones realizadas</string>
    <string name="opcion_area_cuadrado">Cuadrado</string>
    <string name="opcion_area_rectangulo">Rectángulo</string>
    <string name="opcion_area_triangulo">Triangulo</string>
    <string name="opcion_area_circulo">Circulo</string>
    <string name="opcion_volumen_esfera">Esfera</string>
    <string name="opcion_volumen_cilindro">Cilindro</string>
    <string name="opcion_volumen_cono">Cono</string>
    <string name="opcion_volumen_cubo">Cubo</string>
    <string name="valor_lado">Valor del lado:</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Borrar</string>
    <string name="resultado">Resultado</string>
    <string name="area">"Area: "</string>
    <string name="valor_base">Valor base:</string>
    <string name="valor_altura">Valor Altura:</string>
    <string name="valor_radio">Valor radio:</string>
    <string name="volumen">Volumen:</string>
    <string name="error_radio">Digite el radio</string>
    <string name="error_lado">Digite el lado</string>
    <string name="error_base">Digite la base</string>
    <string name="error_altura">Digite la altura</string>
    <string name="numero">No</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="msj_area_del_circulo">Area del circulo</string>
    <string name="msj_area_del_cuadrado">Area del cuadrado</string>
    <string name="msj_area_del_rectangulo">Area del rectangulo</string>
    <string name="msj_area_del_triangulo">Area del triangulo</string>
    <string name="msj_volumen_de_esfera">Volumen de esfera</string>
    <string name="msj_volumen_de_cilindro">Volumen de cilindro</string>
    <string name="msj_volumen_de_cono">Volumen de cono</string>
    <string name="msj_volumen_de_cubo">Volumen de cubo</string>
    <string name="msj_radio">Radio:</string>
    <string name="msj_lado">Lado:</string>
    <string name="msj_base">Base:</string>
    <string name="msj_altura">Altura:</string>



    <string-array name="opciones">
        <item>@string/opcion_areas</item>
        <item>@string/opcion_volumenes</item>
        <item>@string/opcion_operaciones_realizadas</item>
    </string-array>

    <string-array name="opciones_area">
        <item>@string/opcion_area_cuadrado</item>
        <item>@string/opcion_area_rectangulo</item>
        <item>@string/opcion_area_triangulo</item>
        <item>@string/opcion_area_circulo</item>
    </string-array>

    <string-array name="opciones_volumen">
        <item>@string/opcion_volumen_esfera</item>
        <item>@string/opcion_volumen_cilindro</item>
        <item>@string/opcion_volumen_cono</item>
        <item>@string/opcion_volumen_cubo</item>
    </string-array>


</resources>
