<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SeleccionarOperacionesRealizadas">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/opcion_operaciones_realizadas"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tblOperacionesRealizadas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/flEncabezado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operacion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
</LinearLayout>